# predictive-engine-poc

./: .gitignore  ClaudeCode_Build_Plan_Predictive_Threat_Engine.md  README.md  build_normalised_features.py  keep_aws_alive.py  login_bedrock.bat  login_bedrock.sh  pyproject.toml  response_to_database_team.txt  run_extraction.py  run_full_ingest.py  run_snapshot_download.py  run_stratified_observables.py  test_opus_vs_sonnet.py
api/: main.py
api/routes/: devpanel.py  evidence.py  forecast.py  trends.py
config/: default.yaml  feeds.yaml  models.yaml  pricing.yaml  tasks.yaml
docs/: data_request_threatstream_export.md  db_fallback_queries.sql
docs/superpowers/plans/: 2026-06-01-ingest-method-fallback.md  2026-06-03-forecast-ui-v2.md
docs/superpowers/specs/: 2026-05-29-predictive-threat-engine-design.md  2026-06-03-forecast-ui-v2-design.md
prompts/: blob_discovery_v1.txt  entity_extraction_v1.txt  narrative_v1.txt  relationship_parse_v1.txt  story_dedup_adjudicator_v1.txt  tag_normalise_v1.txt
src/pte/: cli.py
src/pte/common/: errors.py  logging.py  provenance.py
src/pte/convert/: confidence.py  discovery.py  extraction.py  normalize_tags.py  (+4 more)
tests/: conftest.py  test_convert.py  test_dedup.py  test_evaluate.py  test_explain.py  test_features.py  test_gateway.py  test_ingest.py  test_predict.py  test_schema.py
tests/fixtures/: actor_temp_hermit.html  cve_2026_48522.json  eventostotales_observable.json  gti_campaign_timeline.html  gti_falsepos_gtjzsj.json  threatfox_210_16_168_11.json
web/: index.html  package-lock.json  package.json
web/src/: App.tsx
(+59 files in other folders)
