[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pte"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]>=0.27",
    "boto3>=1.34",
    "anthropic>=0.28",
    "pydantic>=2.7",
    "duckdb>=1.0",
    "pyarrow>=16",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "click>=8.1",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "scipy>=1.13",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-cov>=5", "httpx"]

[project.scripts]
pte = "pte.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
